# DemoOpengl

./: CMakeLists.txt
GlTest/: CMakeLists.txt  GL.cpp  stdafx.cpp
ThirdPart/glfw/include/glad/: glad.c  glad.h
