CMAKE_MINIMUM_REQUIRED(VERSION 2.8) #设定版本

set(CMAKE_INCLUDE_CURRENT_DIR ON)

PROJECT(OPENGL) 
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)     

#并且把该目录设为连接目录
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/ThirdPart/glfw/lib)
    
#设定头文件目录
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ThirdPart/glfw/include)
    
#增加子文件夹，也就是进入源代码文件夹继续构建
ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/GlTest)